--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
             <link   rel="stylesheet" 
                       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" 
                       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-            <ul class="list-inline m-b-0 text-center">
-              <li><a href="www.facebook.com" target="_blank">   <i class="fab fa-facebook">    </i>    </a> </li>
-              <li><a href="www.twitter.com" target="_blank">   <i class="fab fa-twitter">      </i>    </a> </li>
-              <li><a href="www.youtube.com" target="_blank">   <i class="fab fa-youtube">      </i>    </a> </li>
+                        <ul class="list-inline m-b-0 text-center">
+              <li><a href="https://www.facebook.com" target="_blank">   <i class="fab fa-facebook">    </i>    </a> </li>
+              <li><a href="https://www.twitter.com" target="_blank">   <i class="fab fa-twitter">      </i>    </a> </li>
+              <li><a href="https://www.youtube.com" target="_blank">   <i class="fab fa-youtube">      </i>    </a> </li>
             </ul>
           </div>
           <div class="signup__overlay"></div>
