added Forgotten password?

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                <div class="m-t-lg">
               <ul class="list-inline">
                  <li>
-                  <a class="forgot__link" href="file:///home/shashi/Desktop/new/forgot.html"> Forgot Password </a>
+                  <a class="forgot__link" href="file:///home/shashi/Desktop/new/forgot.html">Forgotten password? </a>
                 </li>
               </ul>
             </div>
